2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-30  Robert Schuster  <thebohemian@gmx.net>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c: Fixed
        copyright header.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Audrius Meskauskas  <AudriusA@bluewin.ch>

        * org/omg/CORBA/WStringSeqHelper.java,
        org/omg/CORBA/AnySeqHelper.java,
        org/omg/CORBA/BooleanSeqHelper.java,
        org/omg/CORBA/CharSeqHelper.java,
        org/omg/CORBA/DoubleSeqHelper.java,
        org/omg/CORBA/FloatSeqHelper.java,
        org/omg/CORBA/LongLongSeqHelper.java,
        org/omg/CORBA/LongSeqHelper.java,
        org/omg/CORBA/OctetSeqHelper.java,
        org/omg/CORBA/ShortSeqHelper.java,
        org/omg/CORBA/StringSeqHelper.java,
        org/omg/CORBA/ULongLongSeqHelper.java,
        org/omg/CORBA/ULongSeqHelper.java,
        org/omg/CORBA/UShortSeqHelper.java,
        org/omg/CORBA/WCharSeqHelper.java:
        Removing redundant object instantiation.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Sven de Marothy  <sven@physto.se>
                    Mark Wielaard  <mark@klomp.org>

        * java/nio/charset/Charset.java (defaultCharset): Use
        SystemProperties.
        (provider): Check gnu.classpath.nio.charset.provider.iconv system
        property and return the IconvProvider when set.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Michael Koch  <konqueror@gmx.de>

        * java/nio/charset/Charset.java
        (defaultCharset): Reformatted.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Michael Koch  <konqueror@gmx.de>

        * gnu/java/net/protocol/http/HTTPConnection.java:
        (userAgent): Initialize from system properties.
        (initUserAgent): Removed.
