@@ -4,6 +4,15 @@
 
 	2005-04-30  Robert Schuster  <thebohemian@gmx.net>
 
+        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c:
+        (window_delete_cb): Made the function return TRUE.
+
+2005-05-15  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-04-30  Robert Schuster  <thebohemian@gmx.net>
+
         * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c: Fixed
         copyright header.
 
